--- a/html/index.html
+++ b/html/index.html
@@ -17,40 +17,85 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <header>
-            <nav>
+            <nav id="navbar">
                 <ul>
-                    <li><a class="current_page" href="#">Home</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a id="home-button" href="#">Home</a></li>
+                    <li><a id="port-button" href="#portfolio">Portfolio</a></li>
+                    <li><a id="contact-button" href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
-        <div class="content">
-            <div class="welcome">
+        <div id="content" class="content">
+            <div id="welcome-page" class="welcome">
                 <h1 class="name">William Watlington</h1>
                 <img id="working_pic" src="../images/Animated_Portrait.png" alt="William Watlington">
                 <h2>Hi! I code simple, beautiful websites.</h2>
                 <h4 class="aqua">(like this one)</h4>
-                <!-- Need to fix button, clicking borders or text does not go to link -->
                 <a class="button" href="#portfolio">
                     <p>Let's go</p>
-                </a>    
-                <!-- Text to appear after one second <h1>Let's Get to Work</h1> -->
+                </a>
             </div>
             <div id="portfolio">
-                <div class="project-group">Landing Pages</div>
-                <div class="project-group">
+                <h2>Here's some of my projects. Take a look around. </h2>
+                <div id="landing-pages" class="project-group">
+                    <button id="close">&#10006</button>
+                    <h4 class="folder-title group-content">Landing Pages</h4>
+                    <div class="folder group-content">
+                    </div>
+                    <div class="folder-border group-content"></div>
+                    <div id="lp1" class="img1 port-img group-content">
+                        <img src="../images/Hotel Site.PNG">
+                        <p id="lp1-text" class="port-caption">Golden Sands Hotel</p>
+                    </div>
+                    <div id="lp1-list" class="port-list">
+                        <ul>
+                            <li>Responsive, attractive site for oceanfront hotel</li>
+                            <li>Clean color scheme reminds customers of the beach</li>
+                            <li>Idk something else goes here I guess</li>
+                        </ul>
+                    </div>
+                    <div id="lp2" class="img2 port-img group-content">
+                        <img src="../images/Hotel Site.PNG">
+                        <p id="lp2-text" class="port-caption">Blah Blah Blah</p>
+                    </div>
+                    <div id="lp2-list" class="port-list">
+                        <ul>
+                            <li>This thing's cool too</li>
+                            <li>Words words words words</li>
+                            <li>lorem ipsum whatever</li>
+                        </ul>
+                    </div>             
+                </div>
+                <!-- <div id="websites" class="project-group">
                     <div class="folder">
                         <h4>Multi-Page Websites</h4>
                     </div>
                     <div class="folder-border"></div>
-                    <img class="img1" src="../images/Hotel Site.PNG">
+                    <div class="img1">
+                        <img src="../images/Hotel Site.PNG">
+                    </div>
                 </div>
-                <div class="project-group">Projects</div>
-                <div class="project-group">Writings</div>
+                <div class="project-group">
+                    <div class="folder">
+                        <h4></h4>
+                    </div>
+                    <div class="folder-border"></div>
+                    <div class="img1">
+                        <img src="../images/Hotel Site.PNG">
+                    </div>
+                </div>
+                <div class="project-group">
+                    <div class="folder">
+                        <h4>Writing</h4>
+                    </div>
+                    <div class="folder-border"></div>
+                    <div class="img1">
+                        <img src="../images/Hotel Site.PNG">
+                    </div> -->
+                </div>
             </div>
         </div>
-        
         <script src="" async defer></script>
+        <script src="../JS/Script.js" type="text/javascript"></script>
     </body>
 </html>
