--- a/index.html
+++ b/index.html
@@ -10,7 +10,24 @@
         <title>William Watlington | Portfolio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../css/styles.css" type="text/css">
+        <link rel="stylesheet" href="css/styles.css" type="text/css">
+        <link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="images/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="images/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="images/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="images/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="images/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="images/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="images/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="images/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+        <link rel="manifest" href="/manifest.json">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+        <meta name="theme-color" content="#ffffff">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -28,7 +45,7 @@
         <div id="content" class="content">
             <div id="welcome-page" class="welcome">
                 <h1 class="name">William Watlington</h1>
-                <img id="working_pic" src="../images/Animated_Portrait.png" alt="William Watlington">
+                <img id="working_pic" src="images/Animated_Portrait.png" alt="William Watlington">
                 <h2>Hi! I code simple, beautiful websites.</h2>
                 <h4 class="aqua">(like this one)</h4>
                 <a class="button" href="#portfolio">
@@ -45,8 +62,8 @@
                         <h4 class="folder-title">Landing Pages</h4>
                     </div>
                     <div class="folder-border group-content"></div>
-                    <div id="lp1" class="img1 port-img group-content">
-                        <img src="../images/Hotel Site.PNG">
+                    <div id="lp1" class="img1 port-img group-content hover-img">
+                        <img src="images/Hotel Site.PNG">
                         <p id="lp1-text" class="port-caption">Golden Sands Hotel</p>
                     </div>
                     <div id="lp1-list" class="port-list">
@@ -58,8 +75,8 @@
                         <br>
                         <a href="#portfolio">View Full Site | View Source Code</a>
                     </div>
-                    <div id="lp2" class="img2 port-img group-content">
-                        <img src="../images/Hotel Site.PNG">
+                    <div id="lp2" class="img2 port-img group-content hover-img">
+                        <img src="images/Hotel Site.PNG">
                         <p id="lp2-text" class="port-caption">Blah Blah Blah</p>
                     </div>
                     <div id="lp2-list" class="port-list">
@@ -78,7 +95,7 @@
                     </div>
                     <div class="folder-border group-content"></div>
                     <div id="web1" class="img1 port-img group-content">
-                        <img src="../images/Hotel Site.PNG">
+                        <img src="images/Hotel Site.PNG">
                         <p id="web1-text" class="port-caption">Golden Sands Hotel</p>
                     </div>
                     <div id="web1-list" class="port-list">
@@ -89,7 +106,7 @@
                         </ul>
                     </div>
                     <div id="web2" class="img2 port-img group-content">
-                        <img src="../images/Hotel Site.PNG">
+                        <img src="images/Hotel Site.PNG">
                         <p id="web2-text" class="port-caption">Blah Blah Blah</p>
                     </div>
                     <div id="web2-list" class="port-list">
@@ -106,7 +123,7 @@
                     </div>
                     <div class="folder-border group-content"></div>
                     <div id="other1" class="img1 port-img group-content">
-                        <img src="../images/Hotel Site.PNG">
+                        <img src="images/Hotel Site.PNG">
                         <p id="other1-text" class="port-caption">Golden Sands Hotel</p>
                     </div>
                     <div id="other1-list" class="port-list">
@@ -117,7 +134,7 @@
                         </ul>
                     </div>
                     <div id="other2" class="img2 port-img group-content">
-                        <img src="../images/Hotel Site.PNG">
+                        <img src="images/Hotel Site.PNG">
                         <p id="other2-text" class="port-caption">Blah Blah Blah</p>
                     </div>
                     <div id="other2-list" class="port-list">
@@ -134,7 +151,7 @@
                     </div>
                     <div class="folder-border group-content"></div>
                     <div id="writing1" class="img1 port-img group-content">
-                        <img src="../images/Hotel Site.PNG">
+                        <img src="images/Hotel Site.PNG">
                         <p id="writing1-text" class="port-caption">Golden Sands Hotel</p>
                     </div>
                     <div id="writing1-list" class="port-list">
@@ -145,7 +162,7 @@
                         </ul>
                     </div>
                     <div id="writing2" class="img2 port-img group-content">
-                        <img src="../images/Hotel Site.PNG">
+                        <img src="images/Hotel Site.PNG">
                         <p id="writing2-text" class="port-caption">Blah Blah Blah</p>
                     </div>
                     <div id="writing2-list" class="port-list">
@@ -159,15 +176,15 @@
                 <div id="external-links" class="project-group">
                     <div class="final-group">
                         <div class="icon-container">
-                            <a class="icon" href="https://github.com/fictionfreeway" target="_blank"><img src="../images/github.png"></a>
-                            <a class="icon" href="https://www.linkedin.com/in/william-watlington-1825ab4a/" target="_blank"><img src="../images/Linkedin.png"></a>
-                            <a class="icon" href="https://www.codecademy.com/profiles/WilliamHWatlington" target="_blank"><img src="../images/Codecademy_Logo-700x629.png"></a>
+                            <a class="icon" href="https://github.com/fictionfreeway" target="_blank"><img src="images/github.png"></a>
+                            <a class="icon" href="https://www.linkedin.com/in/william-watlington-1825ab4a/" target="_blank"><img src="images/Linkedin.png"></a>
+                            <a class="icon" href="https://www.codecademy.com/profiles/WilliamHWatlington" target="_blank"><img src="images/Codecademy_Logo-700x629.png"></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <script src="" async defer></script>
-        <script src="../JS/Script.js" type="text/javascript"></script>
+        <script src="JS/Script.js" type="text/javascript"></script>
     </body>
 </html>
