Responsiveness Update/Added about section
Skeleton of about section and about section functionality added (navbar border color changing, etc) changed scrolling behavior of links to JS behavior and added function to change URL to section upon manual scrolling

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <header>
             <nav id="navbar">
                 <ul>
-                    <li><a id="home-button" href="#">Home</a></li>
-                    <li><a id="port-button" href="#portfolio">Portfolio</a></li>
-                    <li><a id="contact-button" href="#contact">Contact</a></li>
+                    <li><a id="home-button">Home</a></li>
+                    <li><a id="about-button">About</a></li>
+                    <li><a id="port-button">Portfolio</a></li>
                 </ul>
             </nav>
         </header>
@@ -48,14 +48,31 @@
                 <img id="working_pic" src="images/Animated_Portrait.png" alt="William Watlington">
                 <h2>Hi! I code simple, beautiful websites.</h2>
                 <h4 class="aqua">(like this one)</h4>
-                <a class="button" href="#portfolio">
+                <a id="lets-go" class="button">
                     <p>Let's go</p>
                 </a>
+            </div>
+            <div id="about" class="about">
+                <h2 class="about-heading">This is me</h2>
+                <div class="about-content">
+                    <div class="about-pic-container">
+                        <img class="about-pic" src="images/IMG_0431.JPG">
+                        <p>I can usually be found here</p>
+                    </div>  
+                    <div class="about-info">
+                        <ul>
+                            <li>I began as a self taught developer who fell in love with coding years ago</li>
+                            <li>I'm currently pursuing a Bachelor's Degree in full stack web development at Bellevue Univeristy</li>
+                            <li>I work as a freelance web developer specializing in custom small business websites</li>
+                            <li>I utilize HTML, CSS, JavaScript, and Python into my work and am always looking to learn even more</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <div id="portfolio">
                 <button id="next" class="arrow-button">&#8680;</button>
                 <button id="previous" class="arrow-button">&#8678;</button>
-                <h2 id="changing-text">Here is a selection of my work. Take a look around.</h2>
+                <h2 id="changing-text">This is what I do</h2>
                 <button id="close">&#10006</button>
                 <div id="landing-pages" class="project-group">
                     <div class="folder group-content">
