incremental responsiveness update to test

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <li>I began as a self taught developer who fell in love with coding years ago</li>
                             <li>I'm currently pursuing a Bachelor's Degree in full stack web development at Bellevue Univeristy</li>
                             <li>I work as a freelance web developer specializing in custom small business websites</li>
-                            <li>I utilize HTML, CSS, JavaScript, and Python into my work and am always looking to learn even more</li>
+                            <li>I utilize HTML, CSS, JavaScript, and Python in my work and am always looking to learn even more</li>
                         </ul>
                     </div>
                 </div>
