Adding portfolio work

--- a/index.html
+++ b/index.html
@@ -64,10 +64,13 @@
                             <li>I began as a self taught developer who fell in love with coding years ago</li>
                             <li>I'm currently pursuing a Bachelor's Degree in full stack web development at Bellevue Univeristy</li>
                             <li>I work as a freelance web developer specializing in custom small business websites</li>
-                            <li>I utilize HTML, CSS, JavaScript, and Python in my work and am always looking to learn even more</li>
+                            <li>I utilize HTML, CSS, JavaScript, and Python in my work and am always learning more</li>
                         </ul>
                     </div>
                 </div>
+                <a id="see-work" class="button">
+                    <p>See my work</p>
+                </a>
             </div>
             <div id="portfolio">
                 <button id="next" class="arrow-button">&#8680;</button>
@@ -112,25 +115,27 @@
                     </div>
                     <div class="folder-border group-content"></div>
                     <div id="web1" class="img1 port-img group-content">
-                        <img src="images/Hotel Site.PNG">
-                        <p id="web1-text" class="port-caption">Golden Sands Hotel</p>
+                        <img src="images/car_club_site.png">
+                        <p id="web1-text" class="port-caption">The Sports Car Club</p>
                     </div>
                     <div id="web1-list" class="port-list">
                         <ul>
-                            <li>Responsive, attractive site for oceanfront hotel</li>
-                            <li>Clean color scheme reminds customers of the beach</li>
-                            <li>Idk something else goes here I guess</li>
+                            <li>Pure HTML/CSS site for an elite sports car club</li>
+                            <li>Reactive design and subtle CSS animation provide premium user experience</li>
+                            <br>
+                            <a href="Car Club Site/Responsive-Sports-Car-Club-Site/index.html" target="_blank">View Full Site</a> | <a href="https://github.com/fictionfreeway/responsive-car-site" target="_blank">View Source Code</a>
                         </ul>
                     </div>
                     <div id="web2" class="img2 port-img group-content">
                         <img src="images/Hotel Site.PNG">
-                        <p id="web2-text" class="port-caption">Blah Blah Blah</p>
+                        <p id="web2-text" class="port-caption">Golden Sands Hotel</p>
                     </div>
                     <div id="web2-list" class="port-list">
                         <ul>
-                            <li>This thing's cool too</li>
-                            <li>Words words words words</li>
-                            <li>lorem ipsum whatever</li>
+                            <li>Responsive, attractive site for oceanfront hotel</li>
+                            <li>Clean color scheme creates a clean impression on users</li>
+                            <br>
+                            <a href="Golden Sands site/index.html" target="_blank">View Full Site</a> | <a href="https://github.com/fictionfreeway" target="_blank">View Source Code</a>
                         </ul>
                     </div>
                 </div>
