add owc remove subsites

--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
                 <button id="previous" class="arrow-button">&#8678;</button>
                 <h2 id="changing-text">This is what I do</h2>
                 <button id="close">&#10006</button>
-                <div id="landing-pages" class="project-group">
+                <div id="featured-pages" class="project-group">
                     <div class="folder group-content">
-                        <h4 class="folder-title">Landing Pages</h4>
+                        <h4 class="folder-title">Featured</h4>
                     </div>
                     <div class="folder-border group-content"></div>
                     <div id="lp1" class="img1 port-img group-content hover-img">
                         <img src="images/Hotel Site.PNG">
-                        <p id="lp1-text" class="port-caption">Golden Sands Hotel</p>
+                        <p id="lp1-text" class="port-caption">Prototype Hotel Site</p>
                     </div>
                     <div id="lp1-list" class="port-list">
                         <ul>
@@ -96,17 +96,17 @@
                         <a href="#portfolio">View Full Site | View Source Code</a>
                     </div>
                     <div id="lp2" class="img2 port-img group-content hover-img">
-                        <img src="images/Hotel Site.PNG">
-                        <p id="lp2-text" class="port-caption">Blah Blah Blah</p>
+                        <img height="275" src="https://j.gifs.com/mqNl49.gif">
+                        <p id="lp1-text" class="port-caption">Open Wheel Cup: Formula Racing</p>
                     </div>
                     <div id="lp2-list" class="port-list">
                         <ul>
-                            <li>This thing's cool too</li>
-                            <li>Words words words words</li>
-                            <li>lorem ipsum whatever</li>
+                            <li>Mobile racing game made with Unity</li>
+                            <li>Racing Physics, AI, and lap timing</li>
+                            <li>Downloaded 1,000 times each week</li>
                         </ul>
                         <br>
-                        <a href="#portfolio">View Full Site | View Source Code</a>
+                        <a target="blank" href="https://play.google.com/store/apps/details?id=com.DoubleAPex.OpenWheelCup">View on Google Play</a>
                     </div>             
                 </div>
                 <div id="websites" class="project-group start-on-right">
