--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
         <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
         <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-        <link rel="manifest" href="/manifest.json">
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
@@ -60,12 +59,16 @@
                         <p>I can usually be found here</p>
                     </div>  
                     <div class="about-info">
-                        <ul>
-                            <li>I began as a self taught developer who fell in love with coding years ago</li>
-                            <li>I'm currently pursuing a Bachelor's Degree in full stack web development at Bellevue Univeristy</li>
-                            <li>I work as a freelance web developer specializing in custom small business websites</li>
-                            <li>I utilize HTML, CSS, JavaScript, and Python in my work and am always learning more</li>
-                        </ul>
+                        <span>
+                            <p>
+                                I'm a web developer fortunate enough to be a student in Bellevue University's web development program. 
+                                I'm passionate about learning how to do new things and doing them well. 
+                                I also love the meeting of logic and design that can be found in web development, whether it be in designing a stylesheet for a new site 
+                                or taking on a complex project to improve a site's capabilities. 
+                                <br><br>
+                                When I'm not coding or studying, you'll usually find me enjoying auto racing, classic video games or hanging out at my local comic book shop.
+                            </p>
+                        </span>
                     </div>
                 </div>
                 <a id="see-work" class="button">
@@ -87,26 +90,29 @@
                         <p id="lp1-text" class="port-caption">Prototype Hotel Site</p>
                     </div>
                     <div id="lp1-list" class="port-list">
+                        <h3 class="item-header">Oceanfront Hotel Prototype</h3>
                         <ul>
-                            <li>Responsive, attractive site for oceanfront hotel</li>
-                            <li>Clean color scheme reminds customers of the beach</li>
-                            <li>Idk something else goes here I guess</li>
+                            <li>Pure HTML/CSS website prototype</li>
+                            <li>Effective use of striking imagery</li>
+                            <li>Original beach-like color</li>
                         </ul>
-                        <br>
-                        <a href="#portfolio">View Full Site | View Source Code</a>
+                        <br><br>
+                        <a href="https://fictionfreeway.github.io/Hotel-Site-Prototype" target="_blank">View Full Site</a> | <a href="https://github.com/fictionfreeway/Hotel-Site-Prototype" target="_blank">View Source Code</a>
                     </div>
                     <div id="lp2" class="img2 port-img group-content hover-img">
                         <img height="275" src="https://j.gifs.com/mqNl49.gif">
                         <p id="lp1-text" class="port-caption">Open Wheel Cup: Formula Racing</p>
                     </div>
-                    <div id="lp2-list" class="port-list">
-                        <ul>
-                            <li>Mobile racing game made with Unity</li>
-                            <li>Racing Physics, AI, and lap timing</li>
-                            <li>Downloaded 1,000 times each week</li>
+                    <div id="lp2-list" class="port-list"> 
+                        <h3 class="item-header">Open Wheel Cup: Formula Racing</h3>
+                        <ul> 
+                            <li>Solo developed in Unity</li>
+                            <li>Created 3D models and UI</li>
+                            <li>Programmed physics, controls, and more in C#</li>
+                            <li>Over 10,000 downloads and counting</li>
                         </ul>
                         <br>
-                        <a target="blank" href="https://play.google.com/store/apps/details?id=com.DoubleAPex.OpenWheelCup">View on Google Play</a>
+                        <a target="blank" href="https://www.youtube.com/watch?v=cof9brykXHw">Game Trailer</a> | <a target="blank" href="https://play.google.com/store/apps/details?id=com.DoubleAPex.OpenWheelCup"></a>View on Google Play</a>
                     </div>             
                 </div>
                 <div id="websites" class="project-group start-on-right">
@@ -119,24 +125,27 @@
                         <p id="web1-text" class="port-caption">The Sports Car Club</p>
                     </div>
                     <div id="web1-list" class="port-list">
+                        <h3 class="item-header">The Sports Car Club</h3>
                         <ul>
-                            <li>Pure HTML/CSS site for an elite sports car club</li>
+                            <li>Pure HTML/CSS prototype for an elite sports car club</li>
                             <li>Reactive design and subtle CSS animation provide premium user experience</li>
                             <br>
                             <a href="Car Club Site/Responsive-Sports-Car-Club-Site/index.html" target="_blank">View Full Site</a> | <a href="https://github.com/fictionfreeway/responsive-car-site" target="_blank">View Source Code</a>
                         </ul>
                     </div>
-                    <div id="web2" class="img2 port-img group-content">
+                    <div id="web2" class="img2 port-img group-content hover-img">
                         <img src="images/Hotel Site.PNG">
-                        <p id="web2-text" class="port-caption">Golden Sands Hotel</p>
+                        <p id="web2-text" class="port-caption">Prototype Hotel Site</p>
                     </div>
                     <div id="web2-list" class="port-list">
+                        <h3 class="item-header">Oceanfront Hotel Prototype</h3>
                         <ul>
-                            <li>Responsive, attractive site for oceanfront hotel</li>
-                            <li>Clean color scheme creates a clean impression on users</li>
-                            <br>
-                            <a href="Golden Sands site/index.html" target="_blank">View Full Site</a> | <a href="https://github.com/fictionfreeway" target="_blank">View Source Code</a>
+                            <li>Pure HTML/CSS website prototype</li>
+                            <li>Effective use of striking imagery</li>
+                            <li>Original beach-like color scheme</li>
                         </ul>
+                        <br><br>
+                        <a href="https://fictionfreeway.github.io/Hotel-Site-Prototype" target="_blank">View Full Site</a> | <a href="https://github.com/fictionfreeway/Hotel-Site-Prototype" target="_blank">View Source Code</a>
                     </div>
                 </div>
                 <div id="other" class="project-group">
