added portfolio items

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div id="lp2-list" class="port-list"> 
                         <h3 class="item-header">Open Wheel Cup: Formula Racing</h3>
                         <ul> 
-                            <li>Solo developed in Unity</li>
+                            <li>Solo developed in Unity for Android</li>
                             <li>Created 3D models and UI</li>
                             <li>Programmed physics, controls, and more in C#</li>
                             <li>Over 10,000 downloads and counting</li>
@@ -154,25 +154,31 @@
                     </div>
                     <div class="folder-border group-content"></div>
                     <div id="other1" class="img1 port-img group-content">
-                        <img src="images/Hotel Site.PNG">
-                        <p id="other1-text" class="port-caption">Golden Sands Hotel</p>
+                        <img src="images/trivia-game.png">
+                        <p id="other1-text" class="port-caption">Responsive Trivia Game</p>
                     </div>
                     <div id="other1-list" class="port-list">
+                        <h3 class="item-header">Responsive Pop Culture Trivia Game</h3>
                         <ul>
-                            <li>Responsive, attractive site for oceanfront hotel</li>
-                            <li>Clean color scheme reminds customers of the beach</li>
-                            <li>Idk something else goes here I guess</li>
+                            <li>Lightweight HTML/CSS/JS Trivia Game </li>
+                            <li>Responsive for desktop and mobile use</li>
+                            <li>Easily repurposed for educational uses</li>
+                            <br>
+                            <a href="https://fictionfreeway.github.io/Trivia-Game/" target="_blank">View Full Site</a> | <a href="https://github.com/fictionfreeway/Trivia-Game" target="_blank">View Source Code</a>
                         </ul>
                     </div>
                     <div id="other2" class="img2 port-img group-content">
-                        <img src="images/Hotel Site.PNG">
-                        <p id="other2-text" class="port-caption">Blah Blah Blah</p>
+                        <img src="images/portfolio.png">
+                        <p id="other2-text" class="port-caption">Portfolio Site</p>
                     </div>
                     <div id="other2-list" class="port-list">
+                        <h3 class="item-header">Custom Portfolio</h3>
                         <ul>
-                            <li>This thing's cool too</li>
-                            <li>Words words words words</li>
-                            <li>lorem ipsum whatever</li>
+                            <li>Look familiar?</li>
+                            <li>All original work in HTML/CSS/JS</li>
+                            <li>Full code available below</li>
+                            <br>
+                            <a target="_blank" href="https://github.com/fictionfreeway/fictionfreeway.github.io">View code on Github</a>
                         </ul>
                     </div>
                 </div>
