--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <li>Over 10,000 downloads and counting</li>
                         </ul>
                         <br>
-                        <a target="blank" href="https://www.youtube.com/watch?v=cof9brykXHw">Game Trailer</a> | <a target="blank" href="https://play.google.com/store/apps/details?id=com.DoubleAPex.OpenWheelCup"></a>View on Google Play</a>
+                        <a target="blank" href="https://www.youtube.com/watch?v=cof9brykXHw">Game Trailer</a> | <a target="blank" href="https://play.google.com/store/apps/details?id=com.DoubleAPex.OpenWheelCup">View on Google Play</a>
                     </div>             
                 </div>
                 <div id="websites" class="project-group start-on-right">
