--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
                     <div id="other1-list" class="port-list">
                         <h3 class="item-header">Responsive Pop Culture Trivia Game</h3>
                         <ul>
-                            <li>Lightweight HTML/CSS/JS Trivia Game </li>
+                            <li>Lightweight HTML/CSS/JS Trivia Game</li>
+                            <li>Utilizes Bootstrap library</li>
                             <li>Responsive for desktop and mobile use</li>
                             <li>Easily repurposed for educational uses</li>
                             <br>
