--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
+
+<!--
+    File: index.html
+    Author: William Watlington
+    Date: 7/10/2022
+    Description: html for portfolio project
+-->
+
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+
 <html>
     <head>
         <meta charset="utf-8">
