--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@
                     <p>See my work</p>
                 </a>
             </div>
+            <div id="school" class="school">
+                <h2 class="about-heading">This is what I've learned</h2>
+                <ul>
+                    <a href="./resume.html"><li>Resume</li></a>
+                    <a href="./projects.html"><li>Projects</li></a>
+                    <a href="./diagrams.html"><li>Database Diagrams</li></a>
+                    <a href="./tests.html"><li>API Unit Tests</li></a>
+                </ul><br><br>
+                <p>Work from my time at Bellevue University</p>
+            </div>
             <div id="portfolio">
                 <button id="next" class="arrow-button">&#8680;</button>
                 <button id="previous" class="arrow-button">&#8678;</button>
@@ -118,7 +128,7 @@
                             <li>Solo developed in Unity for Android</li>
                             <li>Created 3D models and UI</li>
                             <li>Programmed physics, controls, and more in C#</li>
-                            <li>Over 10,000 downloads and counting</li>
+                            <li>Over 25,000 downloads and counting</li>
                         </ul>
                         <br>
                         <a target="blank" href="https://www.youtube.com/watch?v=cof9brykXHw">Game Trailer</a> | <a target="blank" href="https://play.google.com/store/apps/details?id=com.DoubleAPex.OpenWheelCup">View on Google Play</a>
@@ -231,6 +241,15 @@
                 </div>
             </div>
         </div>
+        <footer>
+            <ul>
+                <a href="https://github.com/fictionfreeway"><li>GitHub</li></a>
+                <a href="https://www.bellevue.edu/degrees/bachelor/web-development-bs/"><li>Bellevue Web Development</li></a>
+                <a href="#"><li>WEB 330 YouTube</li></a>
+                <a href="https://github.com/buwebdev/web-330"><li>WEB 330 Repository</li></a>
+
+            </ul>
+        </footer>
         <script src="" async defer></script>
         <script src="JS/Script.js" type="text/javascript"></script>
     </body>
