--- a/diagrams.html
+++ b/diagrams.html
@@ -51,16 +51,17 @@
         <div id="content" class="content">
             <div class="main" id="diagrams">
                 <h3>Database Diagrams</h3>
-                <ul>
+                <ul style="grid-template-columns: auto; grid-template-rows: auto;">
+                    <li><h3>Diagram 1</h3><img src="./images/diagram1.png"></li>
+                    <li><h3>Diagram 2</h3><img src="./images/diagram2.png"></li>
+                    <!-- <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li> -->
                 </ul>
             </div>
         </div>
