persons api test images

--- a/tests.html
+++ b/tests.html
@@ -52,7 +52,10 @@
             <div class="main" id="diagrams">
                 <h3>API Unit Tests</h3>
                 <ul>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                    <li>Persons API Unit Tests
+                        <img width="500" src="./images/persons-swagger.png">
+                        <img width="500" src="./images/persons-soap.png">
+                    </li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
