update tests images

--- a/tests.html
+++ b/tests.html
@@ -55,8 +55,11 @@
                     <li>Persons API Unit Tests
                         <img width="500" src="./images/persons-swagger.png">
                         <img width="500" src="./images/persons-soap.png">
+                    </li><br>
+                    <li>Users API Unit Tests
+                        <img width="500" src="./images/users-swagger.png">
+                        <img width="500" src="./images/users-soap.png">
                     </li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
