persons api tests

--- a/tests.html
+++ b/tests.html
@@ -60,7 +60,11 @@
                         <img width="500" src="./images/users-swagger.png">
                         <img width="500" src="./images/users-soap.png">
                     </li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                    <li>Users API Unit Tests
+                        <img width="500" src="./images/customers-swagger.png">
+                        <img width="500" src="./images/customers-soap1.png">
+                        <img width="500" src="./images/customers-soap2.png">
+                    </li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
