whatabook diagram added

--- a/diagrams.html
+++ b/diagrams.html
@@ -54,6 +54,7 @@
                 <ul style="grid-template-columns: auto; grid-template-rows: auto;">
                     <li><h3>Diagram 1</h3><img src="./images/diagram1.png"></li>
                     <li><h3>Diagram 2</h3><img src="./images/diagram2.png"></li>
+                    <li><h3>Whatabook Diagram</h3><img src="./images/whatabook.png"></li>
                     <!-- <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
