composers api tests

--- a/tests.html
+++ b/tests.html
@@ -52,6 +52,11 @@
             <div class="main" id="diagrams">
                 <h3>API Unit Tests</h3>
                 <ul>
+                    <li>Composers API Unit Tests
+                        <img width="500" src="./images/composers1.png">
+                        <img width="500" src="./images/composers2.png">
+                        <img width="500" src="./images/composers3.png">
+                    </li><br>
                     <li>Persons API Unit Tests
                         <img width="500" src="./images/persons-swagger.png">
                         <img width="500" src="./images/persons-soap.png">
@@ -59,7 +64,7 @@
                     <li>Users API Unit Tests
                         <img width="500" src="./images/users-swagger.png">
                         <img width="500" src="./images/users-soap.png">
-                    </li>
+                    </li><br>
                     <li>Users API Unit Tests
                         <img width="500" src="./images/customers-swagger.png">
                         <img width="500" src="./images/customers-soap1.png">
