capstone api info

--- a/tests.html
+++ b/tests.html
@@ -70,12 +70,12 @@
                         <img width="500" src="./images/customers-soap1.png">
                         <img width="500" src="./images/customers-soap2.png">
                     </li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                    <li>Capstone API Unit Tests
+                        <img width="500" src="./images/capstone1.png">
+                        <img width="500" src="./images/capstone2.png">
+                        <img width="500" src="./images/capstone3.png">
+                        <img width="500" src="./images/capstone4.png">
+                    </li>
                 </ul>
             </div>
         </div>
