--- a/projects.html
+++ b/projects.html
@@ -58,8 +58,8 @@
                     <a href="https://fictionfreeway.github.io/web-330/"><li>WEB 330</li></a>
                     <li>Landing Page for WEB 330</li>
                     <li></li>
-                    <a href="#"><li>WEB 420 Capstone Project</li></a>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                    <a href="https://watlington-capstone.herokuapp.com/api-docs/"><li>WEB 420 Capstone Project</li></a>
+                    <li>An API made with Python and MongoDB to manage a sports team and player database.</li>
                     <li></li>
                     <a href="#"><li>Composer App</li></a>
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
