value stream presentation added

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                     <a href="./projects.html"><li>Projects</li></a>
                     <a href="./diagrams.html"><li>Database Diagrams</li></a>
                     <a href="./tests.html"><li>API Unit Tests</li></a>
+                    <a href="./web-430/watlington-tech-value-stream.html"><li>Presentation</li></a>
                 </ul><br><br>
                 <p>Work from my time at Bellevue University</p>
             </div>
