--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
                     <a href="./projects.html"><li>Projects</li></a>
                     <a href="./diagrams.html"><li>Database Diagrams</li></a>
                     <a href="./tests.html"><li>API Unit Tests</li></a>
-                    <a href="./web-430/watlington-tech-value-stream.html"><li>Presentation</li></a>
+                    <a href="./web-430/watlington-tech-value-stream.html"><li> Tech Value Stream Presentation</li></a>
+                    <a href="./web-430/watlington-two-pizza-team.html"><li>Two Pizza Team Presentation</li></a>
+                    <a href="./web-430/devops-testing.html"><li>DevOps Testing Presentation</li>
                 </ul><br><br>
                 <p>Work from my time at Bellevue University</p>
             </div>
