added composer app link

--- a/projects.html
+++ b/projects.html
@@ -61,8 +61,8 @@
                     <a href="https://watlington-capstone.herokuapp.com/api-docs/"><li>WEB 420 Capstone Project</li></a>
                     <li>An API made with Python and MongoDB to manage a sports team and player database.</li>
                     <li></li>
-                    <a href="#"><li>Composer App</li></a>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                    <a href="https://fictionfreeway.github.io/async-pipe/composer-list"><li>Composer App</li></a>
+                    <li>Angular app demonstrating use of observables</li>
                     <li></li>
                     <a href="#"><li>GPA Calculator App</li></a>
                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
