--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                     <a href="./web-430/watlington-tech-value-stream.html"><li> Tech Value Stream Presentation</li></a>
                     <a href="./web-430/watlington-two-pizza-team.html"><li>Two Pizza Team Presentation</li></a>
                     <a href="./web-430/devops-testing.html"><li>DevOps Testing Presentation</li>
+                    <a href="./web-430/watlington-pager-rotation.html"><li>Pager Rotation Duties Presentation</li></a>
                 </ul><br><br>
                 <p>Work from my time at Bellevue University</p>
             </div>
