--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                     <a href="./web-430/devops-testing.html"><li>DevOps Testing Presentation</li></a>
                     <a href="./web-430/watlington-pager-rotation.html"><li>Pager Rotation Duties Presentation</li></a>
                     <a href="./web-430/change-management.html"><li>Change Management Presentation</li></a>
+                    <a href="./web-430/decision-making.html"><li>Decision Making Presentation</li></a>
                     <a href="https://fictionfreeway.github.io/in-n-out-books/"><li>In-N-Out Books</li></a>
                 </ul><br><br>
                 <p>Work from my time at Bellevue University</p>
