link to gpa calc app

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                     <a href="./web-430/change-management.html"><li>Change Management Presentation</li></a>
                     <a href="./web-430/decision-making.html"><li>Decision Making Presentation</li></a>
                     <a href="https://fictionfreeway.github.io/in-n-out-books/"><li>In-N-Out Books</li></a>
+                    <a href="https://fictionfreeway.github.io/in-n-out-books/"><li>Angular GPA Calculator App</li></a>
                 </ul><br><br>
                 <p>Work from my time at Bellevue University</p>
             </div>
