--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                     <a href="./web-430/decision-making.html"><li>Decision Making Presentation</li></a>
                     <a href="https://fictionfreeway.github.io/in-n-out-books/"><li>In-N-Out Books</li></a>
                     <a href="https://fictionfreeway.github.io/gpa-calculator-app/session/sign-in"><li>Angular GPA Calculator App</li></a>
+                    <a href="https://fictionfreeway.github.io/loan-app/"><li>Angular Loan App</li></a>
                 </ul><br><br>
                 <p>Work from my time at Bellevue University</p>
             </div>
